# crawnicalinstaller

./: .gitignore  README.md  macosfix.sh  pyproject.toml  requirements.txt
crawnical_installer/src/main/python/: main.py
crawnical_installer/src/main/resources/base/: icon.qrc  installer_design.ui
tests/: test_crawnical_installer.py
